Ajout d'attribut username et date_inscription à User & ajout d'autres code erreur & mise à jour de la doc
