# internal/controllers/users/delete_user.go
@@ -13,10 +13,10 @@ import (
 // @Tags 		users
 // @Summary 	Delete a user
 // @Description Delete the user with the specified ID.
-// @Param 		id 				path 	string 	true 	"User UUID formatted ID"
-// @Success 	204 			"No Content"
-// @Failure     422 			"Cannot parse id"
-// @Failure 	500 			"Internal Server Error"
+// @Param  id 	 path 	 string    true 	 "User UUID formatted ID"
+// @Success 204 {object} models.User		 "No Content"
+// @Failure 422 {object} models.CustomError	 "Cannot parse id"
+// @Failure 500 {object} models.CustomError	 "Something went wrong"
 // @Router 		/users/{id} 	[delete]
 func DeleteUser(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
