# internal/controllers/users/get_users.go
@@ -12,9 +12,9 @@ import (
 // @Tags         users
 // @Summary      Get users.
 // @Description  Get all users.
-// @Success      200            {array}  models.User
-// @Failure      500            "Something went wrong"
-// @Router       /users 		[get]
+// @Success 200 {array}  models.User 		"Array of User object"
+// @Failure 500 {object} models.CustomError "Something went wrong"
+// @Router      /users/ 		[get]
 func GetUsers(w http.ResponseWriter, _ *http.Request) {
 	users, err := users.GetAllUsers()
 	if err != nil {
