# internal/controllers/users/update_user.go
@@ -10,27 +10,16 @@ import (
 )
 
 // UpdateUser
-// @Tags 		users
-// @Summary 	Mettre à jour un utilisateur
-// @Description Met à jour l'utilisateur avec l'ID spécifié.
-// @Param 		id path string true "ID de l'utilisateur au format UUID"
-// @Param 		user body models.User true "Objet utilisateur à mettre à jour"
-// @Success 	200 {object} models.User "Utilisateur mis à jour"
-// @Failure 	404 NOT FOUND
-// @Failure      422            "Cannot parse id"
-// @Failure 	500 {object} models.CustomError "Erreur interne du serveur"
-// @Router 		/users/{id} [put]
-
-// UpdateUser
 // @Tags         user
 // @Summary      Update a user.
 // @Description  Update the user with the specified ID.
-// @Param 		 user 			body 	  models.User 	true  "User object to be updated"
-// @Param        id           	path      string  		true  "User UUID formatted ID"
-// @Success      200            {object}  models.User
-// @Failure 	 404 		 	"User not found"
-// @Failure      422            "Cannot parse id"
-// @Failure      500            "Something went wrong"
+// @Param  user  body 	  models.User{Name, Username} 	true  "User object to be updated"
+// @Param  id    path     string  		true  "User UUID formatted ID"
+// @Success 200  {object} models.User         "User object updated"
+// @Failure 400  {object} models.CustomError  "Invalid JSON format"
+// @Failure 404  {object} models.CustomError  "User not found"
+// @Failure 422  {object} models.CustomError  "Cannot parse id"
+// @Failure 500  {object} models.CustomError  "Something went wrong"
 // @Router       /users/{id} 	[put]
 func UpdateUser(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
